--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
   <meta charset="utf-8">
   <title>Solid Patch Tool</title>
   <link rel="stylesheet" href="main.css" type="text/css">
-  <script src="main.js" type="module"></script>
+  <script src="dist/main.js" type="module"></script>
 </head>
 <body>
   <main>
     <h1>Solid Patch Tool</h1>
+    <div id="status">
+      <p>Logged in as <em id="webId">…</em>.</p>
+      <button id="login">Log in</button>
+    </div>
     <fieldset>
       <ul>
         <li>
