--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 </head>
 <body>
   <main>
-    <h1>Solid Patch Tool</h1>
-    <div id="status">
+    <h1>
+      <img src="logo.svg" alt="">
+      <span>Solid Patch Tool</span>
+    </h1>
+    <div id="loginStatus">
       <p>Logged in as <em id="webId">…</em>.</p>
       <button id="login">Log in</button>
     </div>
